--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,13 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.1'
     compile 'com.google.dagger:dagger:2.1'
     provided 'javax.annotation:jsr250-api:1.0'
+
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.0.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+    // ButterKnife
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
